fixed navbar container on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -191,9 +191,9 @@ p {
   }
 
   &__list {
-    height: 100%;
+    align-self: stretch;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     transition: 0.2s ease-in-out;
 
     li {
@@ -588,7 +588,7 @@ p {
 
   .card {
     display: grid;
-    grid-template-rows: 8rem minmax(0.8rem, 3.5rem) minmax(3rem, auto);
+    grid-template-rows: 7rem minmax(0.8rem, 3.5rem) minmax(3rem, auto);
     row-gap: 1rem;
     min-height: 4rem;
     box-shadow: 0 1.5rem 2.5rem -0.5rem rgba(30, 5, 70, 0.3);
@@ -608,17 +608,17 @@ p {
       }
 
       lord-icon {
-        width: 112px;
-        height: 112px;
+        width: 104px;
+        height: 104px;
         align-self: center;
         margin-left: -1rem;
-        margin-bottom: -0.5rem;
+        margin-bottom: 0.5rem;
       }
     }
 
     h3 {
       display: flex;
-      align-items: center;
+      align-items: flex-end;
       font-size: $font-size-h3;
       font-weight: 500;
       line-height: 1.2;
